refactor: add user dto
